auth, prisma OK

--- a/.env
+++ b/.env
@@ -1,12 +1,14 @@
-NEXTAUTH_URL=http://localhost:3000/
-NEXTAUTH_URL_INTERNAL=http://localhost:3000/
-NEXTAUTH_SECRET=l/xjKeDIEHC6OraB8q13tJzxl2mLMFjq77sugbPLykY=
-GOOGLE_ID=426944037353-doj012lil9vjrbb60o8gghbrs0khh1sp.apps.googleusercontent.com 
-GOOGLE_SECRET=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
+NEXTAUTH_URL="http://localhost:3000/"
+NEXTAUTH_URL_INTERNAL="http://localhost:3000/"
+NEXTAUTH_SECRET="l/xjKeDIEHC6OraB8q13tJzxl2mLMFjq77sugbPLykY="
+GOOGLE_CLIENT_ID="426944037353-doj012lil9vjrbb60o8gghbrs0khh1sp.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
 MP_PUBLIC_KEY=TEST-9bb1f31d-e54b-4a9c-9698-f8f984e21b01
 MP_ACCESS_TOKEN=TEST-8251247267654899-080408-97c4c8db3fb366628f0449948c58e464-54797482
 CLOUDINARY_CLOUD_NAME=dxvxzikri
 CLOUDINARY_API_KEY=312943425594897
 CLOUDINARY_API_SECRET=3Ji09N87xo4tK7_WBWjqT2qQjIA
 MAIN_EVENT=651f0cbcfeec3285525b3a85
-apiUrl=https://mug-tickets-server.vercel.app/api
+# apiUrl=https://mug-tickets-server.vercel.app/api
+apiUrl=http://localhost:27017/api
+DATABASE_URL="postgresql://root:root@localhost:5432/tickets-db"
