--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -32,6 +33,8 @@
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-google-autocomplete": "^2.7.3",
+    "react-google-places-autocomplete": "^4.0.1",
     "react-hook-form": "^7.50.1",
     "sass": "^1.69.7",
     "tailwind-merge": "^2.2.0",
