--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.309.0",
+    "mercadopago": "^2.0.8",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
